style fix so it wont collapse

--- a/srcs/app/srcs/app/assets/stylesheets/application.css
+++ b/srcs/app/srcs/app/assets/stylesheets/application.css
@@ -24,3 +24,20 @@ table #users-table th, table #users-table tr {
     vertical-align: middle;
     padding: 10px;
 }
+
+.navbar {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.navbar.navbar-expand {
+    background-color: #00000e;
+}
+
+.navbar.navbar-expand li a {
+    color: #ebebeb;
+}
+
+.navbar.navbar-expand li a:hover {
+    color: #b6bbff;
+}
